# harry

./: CMakeLists.txt  FindRAGEL.cmake  LICENSE.md  README.md  args.h  assert.cc  assert.h  gui.h  kateall.sh  main.cc  progress.h  utils.h
arith/: README.md  bitstream.h  coder.h  model.h  msb.h  stat_adaptive.h  t  test.cc
cbm/: README.md  base.h  cutborder.h  decoder.h  encoder.h
formats/: unified_reader.h  unified_writer.h
formats/hry/: attrcode.h  cbm_base.h  cbm_decoder.h  cbm_encoder.h  common.h  cutborder.h  cutbordermashine.h  io.h  models.h  prediction.h  reader.cc  reader.h  transform.h  writer.cc  writer.h
formats/ply/: reader.cc  reader.h  writer.cc  writer.h
inspect/: glwidget.cc  glwidget.h  mainwindow.cc  mainwindow.h  window.cc  window.h
mesh_readers/: all.h  mtl.h  obj.h  ply.h  reader.h
structs/: attr.h  conn.h  faces.h  mesh.h  mixing.h  quant.h  types.h
utils/: args.h  assert.h  endian.h  io.h  progress.h  types.h
